--- a/completadas.html
+++ b/completadas.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Tareas Completadas</h1>
         
-        <a href="Inicio.html" class="back-link">Volver al inicio</a>
+        <a href="Index.html" class="back-link">Volver al inicio</a>
     </header>
     <main>
         <section class="task-section completed">
