--- a/Index.html
+++ b/Index.html
@@ -13,7 +13,7 @@
         <nav class="navbar">
             <div class="logo">
                 <i class="fas fa-tasks" aria-hidden="true"></i>
-                <h1>Gestor de Tareas</h1>
+                <h1>Gestor de Tarea</h1>
             </div>
             <ul class="nav-links">
                 <li><a href="#nueva-tarea">Nueva Tarea</a></li>
