--- a/Pendientes.html
+++ b/Pendientes.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Tareas Pendientes</h1>
-        <a href="Index.html" class="back-link">Volver al inicio</a>
+        <a href="index.html" class="back-link">Volver al inicio</a>
     </header>
     <main>
         <section class="task-section waiting">
