agregue el footer

--- a/Pendientes.html
+++ b/Pendientes.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tareas Pendientes - Gestor de Tareas</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="shortcut icon" href="/Imagenes/1560.png">
 </head>
 <body>
@@ -53,5 +54,20 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h3>Enlaces Rápidos</h3>
+                <ul>
+                    <li><a href="#ajustes"><i class="fas fa-cog"></i> Ajustes</a></li>
+                    <li><a href="#ayuda"><i class="fas fa-question-circle"></i> Ayuda</a></li>
+                    <li><a href="#contacto"><i class="fas fa-envelope"></i> Contacto</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 Gestor de Tareas. Todos los derechos reservados.</p>
+        </div>
+    </footer>
 </body>
 </html>
